LMS1-526 Be able to filter licences by licensee group (#390)
* LMS1-526 Be able to filter licences by licensee group

* Rename FilterUtil methods to make them more readable

* Add coverage

* Add CVE-2026-48043 to trivy ignore